@@ -1,7 +1,7 @@
 #resource bundle for the plugin
 
 #version of the plugin
-plugin.version = 1.0.5_1
+plugin.version = 1.0.5_2
 #folder name inside the appdata/roaming folder
 plugin.appdata.folderName = Arma Intellij Plugin
 
@@ -83,7 +83,7 @@ lang.sqf.refactoring.dialog.functions.rename_root_tag.tooltip = Rename all funct
 #------------Header------------#
 lang.header.name_for_display = Arma Header
 lang.header.description = Arma - Header/Config
-lang.header.file_extension = h;hh;hpp;ext;sqm
+lang.header.file_extension = h;hh;hpp;ext
 lang.header.file_extension_default = .h
 lang.header.code_style_settings.display_name = Arma Header
 
